--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div><p>CHARACTER</p></div>
     <a id="menuBack" class="opa0"><i class="fa fa-times btnBack"></i></a>
     <ul id="player">
-      <li><img id="playerImg1" src="mario item/ビジネス.png"></li>
+      <li><img id="playerImg1" src="https://issekinichoo.github.io/RouletteGame/mario%20item/%E3%83%93%E3%82%B8%E3%83%8D%E3%82%B9.png"></li>
       <li><img id="playerImg2" src="mario item/111024.png"></li>
       <li><img id="playerImg3" src="mario item/老人.png"></li>
       <li><img id="playerImg4" src="mario item/157480.png"></li>
@@ -52,7 +52,7 @@
         <img src="mario item/キツネ.png" id='front'  onclick="erase(this)">
         <img src="mario item/サル.png" id='front'  onclick="erase(this)">
         <img src="mario item/タヌキ.png" id='front'  onclick="erase(this)">
-        <img src="mario item/ダルマ.png" id='front'  onclick="erase(this)">
+        <img src="https://issekinichoo.github.io/RouletteGame/mario%20item/%E3%83%80%E3%83%AB%E3%83%9E.png" id='front'  onclick="erase(this)">
         <img src="mario item/トリ.png" id='front'  onclick="erase(this)">
       </div>
       <a id="btnBack" class="opa0"><i class="fa fa-times btnBack"></i></a>
