--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div><p>CHARACTER</p></div>
     <a id="menuBack" class="opa0"><i class="fa fa-times btnBack"></i></a>
     <ul id="player">
-      <li><img id="playerImg1" src="https://issekinichoo.github.io/RouletteGame/mario%20item/%E3%83%93%E3%82%B8%E3%83%8D%E3%82%B9.png"></li>
+      <li><img id="playerImg1" src="https://github.com/issekinichoo/RouletteGame/blob/main/mario%20item/%E3%83%92%E3%82%99%E3%82%B7%E3%82%99%E3%83%8D%E3%82%B9.png?raw=true"></li>
       <li><img id="playerImg2" src="mario item/111024.png"></li>
       <li><img id="playerImg3" src="mario item/老人.png"></li>
       <li><img id="playerImg4" src="mario item/157480.png"></li>
