--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <img src="mario item/キツネ.png" id='front'  onclick="erase(this)">
         <img src="mario item/サル.png" id='front'  onclick="erase(this)">
         <img src="mario item/タヌキ.png" id='front'  onclick="erase(this)">
-        <img src="https://issekinichoo.github.io/RouletteGame/mario%20item/%E3%83%80%E3%83%AB%E3%83%9E.png" id='front'  onclick="erase(this)">
+        <img src="https://github.com/issekinichoo/RouletteGame/blob/main/mario%20item/%E3%82%BF%E3%82%99%E3%83%AB%E3%83%9E.png?raw=true">
         <img src="mario item/トリ.png" id='front'  onclick="erase(this)">
       </div>
       <a id="btnBack" class="opa0"><i class="fa fa-times btnBack"></i></a>
